deleted helloworld.py and moved code to manageble files with unit names

--- a/templates/rot13form.html
+++ b/templates/rot13form.html
@@ -4,11 +4,11 @@
 {% endblock %}
 {% block body %}
 	<form method='post' >
-				<h1>Enter some text to rot-13</h1>
-				<br>
-				<textarea rows='15' cols='50' name='text' placeholder='Message'>{{ message }}</textarea>
-				<br>
-				<br>
-				<input type='submit'>
+		<h1>Enter some text to rot-13</h1>
+		<br>
+		<textarea rows='15' cols='50' name='text' placeholder='Message'>{{ message |safe}}</textarea>
+		<br>
+		<br>
+		<input type='submit'>
 	</form>
 {% endblock %}
