change the urls to share a common ancestor

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,7 @@
 <div class='blog-post'>
 	<div class='blog-post-heading'>
 		<div class='post-subject'>
-			<a href='/unit3/blog/{{ p.key().id() }}'>{{ p.subject }}</a>
+			<a href='/blog/{{ p.key().id() }}'>{{ p.subject }}</a>
 		</div>
 		<div class='created_date'>
 			{{ p.created.strftime("%b %d, %Y") }}
